www/css/media.css
/*!
 * SPDX-License-Identifier: GPL-3.0-or-later
 * Copyright 2014 The moOde audio player project / Tim Curtis
*/

/*
// MEDIA QUERIES
*/

body {
	--tag-view-cover-size: 100px;
}

/*
// Portrait
*/
@media (orientation:portrait) {
	.ss-backdrop {width:auto;height:100vh;max-width:100vh;}
	#ss-coverart-url img {width:80vw;}
	body.cv #playbar-timeline {width:30%}
	body.cv #playbar-toggles .btn {margin:0 .25rem}
}
/* ... */

